--- a/tema_undangan/tema_10/style.css
+++ b/tema_undangan/tema_10/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
-/* Desktop */
-@media screen and (min-width: 412px) {
+/* Desktop HDPi*/
+@media screen and (max-width: 1440px) {
     #app{
         width: 412px;
         margin: 0 auto;
@@ -72,14 +72,20 @@
   }
 
 }
-/* Mobile */
-@media screen and (max-width: 412px) {
+
+/* Desktop HD*/
+@media screen and (max-width: 1280px) {
+    #app{
+        width: 412px;
+        margin: 0 auto;
+    }
+
     .bg-pagecover{
         background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 100vh;
+        height: 120vh;
     }
     
     .bg-page1{
@@ -87,21 +93,21 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 92vh;
+        height: 100vh;
     }
     .bg-page2{
         background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 140vh;
+        height: 150vh;
     }
     .bg-page3{
         background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 208vh;
+        height: 225vh;
     }
     
     .bg-page4{
@@ -109,7 +115,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 107vh;
+        height: 115vh;
     }
     
     .bg-page5{
@@ -117,7 +123,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 245vh;
+        height: 262vh;
     }
     
     .bg-page6{
@@ -125,7 +131,75 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 265vh;
+        height: 280vh;
+    }
+
+    /* content fixed */
+
+.navbar {
+    overflow: hidden;
+    background-color: transparent;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+  }
+
+}
+
+/* Mobile */
+@media screen and (max-width: 412px) {
+    .bg-pagecover{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 110vh;
+    }
+    
+    .bg-page1{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 105vh;
+    }
+    .bg-page2{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 160vh;
+    }
+    .bg-page3{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 240vh;
+    }
+    
+    .bg-page4{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 120vh;
+    }
+    
+    .bg-page5{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 280vh;
+    }
+    
+    .bg-page6{
+        background-image: url('https://foreverr.id/wp-content/uploads/uw028/8c7dd922ad47494fc02c388e12c00eac-scaled.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 300vh;
     }
 
     /* content fixed */
@@ -140,7 +214,6 @@
   }
 
 }
-
 .fontElsie{
     font-family: 'Elsie Swash Caps', cursive;
 }
@@ -166,3 +239,24 @@
     width: 100%;
 }
 
+.animation1 {
+    position: relative;
+    animation: MyDiv1 2s infinite ease-in-out;
+    animation-direction: alternate-reverse;
+  }
+  
+  @keyframes MyDiv1 {
+    0%   {left: 0px; top: 0px;}
+    100%  {left: 20px; top: 0px;}
+  }
+
+  .animation2 {
+    position: relative;
+    animation: MyDiv2 1s infinite ease-out;
+    animation-direction: alternate-reverse;
+  }
+  
+  @keyframes MyDiv2 {
+    0%   {left: 0px; top: 0px;}
+    100%  {left: 20px; top: 0px;}
+  }
