--- a/tema_undangan/tema_5/style.css
+++ b/tema_undangan/tema_5/style.css
@@ -1,70 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap');
 
-/* Mobile 300px
-@media screen and (min-width: 300px) {
-    .bg-pagecover{
-        background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 100vh;
-    }
-
-    .bg-page2{
-        background-color: #ffffe6;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-
-    .bg-page3{
-        background-image: url('./img/bg-img.png'), url('https://images.ctfassets.net/q40z6pfqje6o/3LtK6YN6dXZlCncHHdLFH3/224ff250008085fab0134a9a92eb182c/5698719-ai.png');
-        background-size: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin-top: -5vh;
-    }
-
-    .bg-page4{
-        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/U9PTJJXcez5lw0NVL16H6/51bb5917e53b18242e62f2e14017b62e/New_Project__5_.png'), url('./img/bg-img2.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin-top: -5vh;
-    }
-
-    .bg-page5{
-        background-color: #ffffe6;
-    }
-    
-    
-
-    .bg-page6{
-        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/01QcYN53sWodwqR7gvquz5/f2901a8caa319c2919353d49c86d5770/New_Project__9_.png'), url('./img/bg-img.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    
-    .bg-page7{
-        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/2rvAyhhIJ74iEzdioDn7zI/a2b461f702e9cb403fce85bb90aed3b7/Polygon-1s-1141px.svg'), url('./img/bg-img.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 160vh;
-    }
-    .cardNavigation{
-        margin-left: 8vh;
-        margin-right: 11vh;
-    }
-    
-    .v-carousel{
-        max-width: 100%;
-        max-height: 500px;
-     }
-} */
-
-
 /* Mobile  400px*/
 @media screen and (max-width: 600px) {
     .bg-pagecover{
@@ -115,17 +50,12 @@
         background-size: cover;
     }
     .cardNavigation{
-        margin-left: 16vh;
-        margin-right: 11vh;
-    }
-
-    
-    
-    
+        margin: 0 5.5em;
+    }    
 }
 
-/* Desktop HDPi
-@media screen and (max-width: 1440px) {
+ /* Desktop HDPi */
+@media screen and (min-width: 1440px) {
     .bg-pagecover{
         background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
         background-size: cover;
@@ -203,7 +133,7 @@
 }
 
 /* Desktop HD*/
-/* @media screen and (max-width: 1280px) {
+@media screen and (min-width: 1280px) {
     .bg-pagecover{
         background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
         background-size: cover;
@@ -287,7 +217,7 @@
         margin-left: 5vh;
         max-width: 50px;
     }
-} */ */
+} */
     
 
 .none{
