--- a/tema_undangan/tema_7/style.css
+++ b/tema_undangan/tema_7/style.css
@@ -1,91 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Joan&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-/* Mobile 400px*/
-@media screen and (min-width: 400px){
-    .bg-page2 {
-        background-color: #fff;
-        height: 80vh;
-    }
 
-    .bg-page2_1 {
-        background-color: #eef8ff;
-    }
-
-    .bg-page3 {
-        background-size: cover;
-        background-position: top;
-        background-repeat: no-repeat;
-        height: 150vh;
-    }
-
-    .bg-page4 {
-        background-color: #fff;
-        height: 350vh;
-    }
-    
-
-    .bg-page5{
-        background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/f92dc892d7faba8c2253a2ccfca156ba6ad908ad.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 30vh;
-    }
-
-        .bg-page6 {
-    background-color: #fff;
-    height: 220vh;
-}
-    
-
-    .fontAkad {
-        font-family: 'Satisfy', cursive;
-        font-size: 30px;
-    }
-
-    .fontLove {
-        font-family: 'Satisfy', cursive;
-        font-size: 40px;
-    }
-}
 
 /* Mobile 500px*/
-@media screen and (min-width: 500px){
+@media screen and (max-width: 600px){
     .bg-page2 {
-        background-color: #fff;
-        height: 80vh;
+        background-color: rgb(255, 255, 255);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     .bg-page2_1 {
         background-color: #eef8ff;
-        height: 210vh;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     .bg-page3 {
-        background-size: cover;
-        background-position: top;
         background-repeat: no-repeat;
-        height: 150vh;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     .bg-page4 {
         background-color: #fff;
-        height: 350vh;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
     
 
     .bg-page5{
-        background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/f92dc892d7faba8c2253a2ccfca156ba6ad908ad.jpg');
-        background-size: cover;
-        background-position: center;
         background-repeat: no-repeat;
-        height: 30vh;
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
     }
 
         .bg-page6 {
-    background-color: #fff;
-    height: 240vh;
+            background-color: #fff;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
+            background-size: cover;
 }
     
 
