--- a/tema_undangan/tema_9/style.css
+++ b/tema_undangan/tema_9/style.css
@@ -133,11 +133,10 @@
 
     
 .bg-page6{
-    background-image: url('https://s3.ap-southeast-1.amazonaws.com/cdn.kadio.id/images/kdo4/paper.png');
-    background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
-    height: 225vh;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 
